Fixed some layout problems

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,9 +6,14 @@
 }
 
 body {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     overflow-x: hidden;
     background-color: white;
+    width: 100vw;
 }
 
 #certificate-creator {
@@ -18,6 +23,7 @@ body {
     background-color: beige;
     margin-bottom: 55px;
     padding: 25px;
+    width: 100vw;
 }
 
 #certificate-creator {
